--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "illuminate/database": "^10.48",
         "phpmailer/phpmailer": "^6.9",
         "pusher/pusher-php-server": "^7.2",
-        "cboden/ratchet": "^0.4.4",
-      "ext-http": "*"
+        "cboden/ratchet": "^0.4.4"
     }
 }
